# czmuc

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  README.md  czmuc.natvis  gen_vs2017.bat  gen_vs2019.bat  prepare_standalone_development.bat
CppDepend/: czlib.cdproj
Samples/RPCChat/RPCChatClient/: RPCChatClient.cpp  RPCChatClient.vcxproj  RPCChatClient.vcxproj.filters  RPCChatClientPCH.cpp  RPCChatClientPCH.h
Samples/RPCChat/RPCChatCommon/: RPCChatClientInterface.h  RPCChatCommon.cpp  RPCChatCommon.vcxproj  RPCChatCommon.vcxproj.filters  RPCChatCommonPCH.cpp  RPCChatCommonPCH.h  RPCChatInterface.h  RPCChatServerInterface.h
Samples/RPCChat/RPCChatServer/: RPCChatServer.cpp  RPCChatServer.vcxproj  RPCChatServer.vcxproj.filters  RPCChatServerPCH.cpp  RPCChatServerPCH.h
Samples/RPCSelfContained/: RPCSelfContained.vcxproj  RPCSelfContained.vcxproj.filters  SelfContained.cpp  SelfContainedPCH.cpp  SelfContainedPCH.h  SelfContainedServer.cpp  SelfContainedServer.h
UnitTest++/: CMakeLists.txt  unittestpp_vs2015.vcxproj
UnitTests/: CMakeLists.txt  TestAny.cpp  TestBuffer.cpp  TestCallstack.cpp  TestChunkBuffer.cpp  TestDeadlineTimer.cpp  TestFuture.cpp  TestRPC.cpp  TestRPCTraits.cpp  TestRingBuffer.cpp  TestSharedQueue.cpp  TestTCPSocket.cpp  TestTCPSocket2.cpp  TestThreadingUtils.cpp  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  UnitTestsPCH.cpp  UnitTestsPCH.h
VisualStudio/: TODO.txt  czlib.props  czlib.sln  czlib.vcxproj  czlib.vcxproj.filters  czmuc.props  czmuc.sln  czmuc.vcxproj  czmuc.vcxproj.filters
cmake/: ucm.cmake  utils.cmake
source/: CMakeLists.txt  czlibPCH.h  czmuc.natvis  czmucPCH.h
source/crazygaze/: Algorithm.h  Any.cpp  Any.h  AsyncCommandQueue.cpp  AsyncCommandQueue.h  Buffer.cpp  Buffer.h  Callstack.h  ChunkBuffer.cpp  ChunkBuffer.h  CompletionPort.cpp  CompletionPort.h  Concurrent.h  DeadlineTimer.cpp  DeadlineTimer.h  Expected.h  FNVHash.h  File.cpp  File.h  Filename.cpp  Filename.h  Filesystem.cpp  Filesystem.h  Filetime.cpp  Filetime.h  Future.h  Guid.cpp  Guid.h  IniFile.cpp  IniFile.h  Json.cpp  Json.h  Logging.cpp  Logging.h  Parameters.cpp  Parameters.h  Random.cpp  Random.h  RingBuffer.cpp  RingBuffer.h  (+29 more)
source/crazygaze/muc/: Algorithm.h  Any.cpp  Any.h  ArrayView.h  AsyncCommandQueue.cpp  AsyncCommandQueue.h  Buffer.cpp  Buffer.h  Callstack.h  ChildProcessLauncher.cpp  ChildProcessLauncher.h  ChunkBuffer.cpp  ChunkBuffer.h  CompletionPort.cpp  CompletionPort.h  Concurrent.h  DateTime.cpp  DateTime.h  DeadlineTimer.cpp  DeadlineTimer.h  Expected.h  FNVHash.h  File.cpp  File.h  FileLogOutput.cpp  FileLogOutput.h  Filename.cpp  Filename.h  Filesystem.cpp  Filesystem.h  Filetime.cpp  Filetime.h  Future.h  Guid.cpp  Guid.h  IdAccessible.h  IniFile.cpp  IniFile.h  Json.cpp  Json.h  (+43 more)
source/crazygaze/muc/net/: SocketAddress.cpp  SocketAddress.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h
source/crazygaze/muc/rpc/: GenericRPC.h  RPCBase.cpp  RPCBase.h  RPCConnection.h  RPCGenerate.h  RPCProcessor.cpp  RPCProcessor.h  RPCServer.h  RPCTransport.cpp  RPCTransport.h  RPCUtils.h  TCPTransport.cpp  TCPTransport.h
source/crazygaze/net/: CompletionPort.cpp  CompletionPort.h  SocketAddress.cpp  SocketAddress.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h
source/crazygaze/net/details/: TCPSocketDebug.cpp  TCPSocketDebug.h
source/crazygaze/rpc/: GenericRPC.h  RPCBase.cpp  RPCBase.h  RPCChannel.cpp  RPCChannel.h  RPCClient.h  RPCConnection.h  RPCGenerate.h  RPCProcessor.cpp  RPCProcessor.h  RPCServer.h  RPCTransport.cpp  RPCTransport.h  RPCUtils.h  TCPChannel.cpp  TCPChannel.h  TCPTransport.cpp  TCPTransport.h
tests/: CMakeLists.txt  TestArrayView.cpp  TestBuffer.cpp  TestChunkBuffer.cpp  TestQuickVector.cpp  TestRingBuffer.cpp  TestSharedQueue.cpp  TestThreadingUtils.cpp  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  UnitTestsPCH.cpp  UnitTestsPCH.h
